Fix gallery: register GSAP plugins, fix image height
- animations.js: register ScrollTrigger and SplitText
- gallery.css: add height: auto to prevent stretched images

--- a/theme/assets/css/pages/gallery.css
+++ b/theme/assets/css/pages/gallery.css
@@ -19,6 +19,7 @@
 
 .gallery__img {
 	display: block;
+	height: auto;
 	width: 100%;
 }
 
